WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232133
ASSERT(node) triggered after surroundNodeRangeWithElement for node without editable style
https://bugs.webkit.org/show_bug.cgi?id=232133
Summary
ASSERT(node) triggered after surroundNodeRangeWithElement for node without ed...
Gabriel Nava Marino
Reported
2021-10-21 23:28:24 PDT
There are cases where if the last styled node was not parent node of a current text node, but we wish to style the text node we will add a style span to surround the text node. We do this via createStyleSpanElement. However, in order to properly insert the span within the current node, it requires the parent node to have editable style and renderer.
Attachments
Patch
(4.50 KB, patch)
2021-10-21 23:31 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
Patch
(6.52 KB, patch)
2021-10-22 10:04 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
Patch
(7.14 KB, patch)
2021-10-22 10:43 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
Patch
(6.73 KB, patch)
2021-10-22 11:25 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Gabriel Nava Marino
Comment 1
2021-10-21 23:31:44 PDT
Created
attachment 442127
[details]
Patch
Gabriel Nava Marino
Comment 2
2021-10-22 10:04:58 PDT
Created
attachment 442173
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-10-22 10:20:05 PDT
Comment on
attachment 442173
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=442173&action=review
> Source/WebCore/ChangeLog:7 > +
There should be an analysis of the bug and what you did to fix it here.
Gabriel Nava Marino
Comment 4
2021-10-22 10:38:09 PDT
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 442173
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=442173&action=review
> > > Source/WebCore/ChangeLog:7 > > + > > There should be an analysis of the bug and what you did to fix it here.
Thank you, I will add an analysis here.
Gabriel Nava Marino
Comment 5
2021-10-22 10:43:20 PDT
Created
attachment 442180
[details]
Patch
Gabriel Nava Marino
Comment 6
2021-10-22 11:25:51 PDT
Created
attachment 442182
[details]
Patch
EWS
Comment 7
2021-10-25 10:48:31 PDT
Committed
r284792
(
243501@main
): <
https://commits.webkit.org/243501@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442182
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-10-25 10:49:22 PDT
<
rdar://problem/84620978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug